Ability to toggle full path names from the Signals view, made all Signals list action buttons share similar styles, slightly reduced font size of Signal list text, fixed signal count so it is always visible

--- a/src/components/Debugger/Signals/List/styles.css
+++ b/src/components/Debugger/Signals/List/styles.css
@@ -7,7 +7,7 @@
   border: 1px solid #DDD;
   width: 100%;
   list-style-type: none;
-  height: calc(100vh - 156px);
+  height: calc(100vh - 181px);
   overflow-y: scroll;
 }
 
@@ -20,6 +20,9 @@
   border-bottom: 1px solid #DDD;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+.signals .list-item-grouped {
+  padding-right: 25px;
 }
 
 .signals .list-item:hover {
@@ -42,10 +45,6 @@
   border-left: 5px solid #DDD;
 }
 
-.signals .list-grouped {
-
-}
-
 .signals .list-indicator {
   position: absolute;
   left: 0;
@@ -56,9 +55,17 @@
 }
 
 .signals .list-name {
+  font-size: 0.9rem;
   user-select: none;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
+}
+
+.signals .list-groupCount {
+  position: absolute;
+  right: 4px;
+  top: -1px;
+  font-size: 0.7rem;
 }
 
 .signals .list-type {
