--- a/src/components/Debugger/Signals/styles.css
+++ b/src/components/Debugger/Signals/styles.css
@@ -10,13 +10,7 @@
   min-width: 200px;
 }
 
-.signals-signal {
-  margin-left: 10px;
-  flex: 3;
-  overflow: auto;
-}
-
-.signals-rewrite {
+.signals-list button {
   display: block;
   border-top: 0;
   border-left: 1px solid #DDD;
@@ -30,29 +24,21 @@
   cursor: pointer;
   font-weight: bold;
 }
-.signals-rewrite:hover {
+
+.signals-list button:hover {
   background-color: #FAFAFA;
 }
 
 .signals-reset {
-  display: block;
-  border-top: 0;
-  border-left: 1px solid #DDD;
-  border-right: 1px solid #DDD;
-  border-bottom: 1px solid #DDD;
-  background-color: #fff;
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
-  height: 25px;
-  padding: 5px;
-  margin: 0;
-  width: 100%;
-  cursor: pointer;
   margin-bottom: 5px;
-  font-weight: bold;
 }
-.signals-reset:hover {
-  background-color: #FAFAFA;
+
+.signals-signal {
+  margin-left: 10px;
+  flex: 3;
+  overflow: auto;
 }
 
 .signals-textarea {
